[package]
name = "jubjub_curve"
version = "0.1.0"
edition = "2021"

[dependencies]
# crypto import
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
curve_traits = { version = "0.1.0", path = "../traits" }
bls381 = { git = "ssh://git@github.com/arithmic/field_trait.git", branch = "main" }
traits = { git = "ssh://git@github.com/arithmic/field_trait.git", branch = "main" }
